mainAgenda Responsive Web Design + i18n

--- a/src/app/components/i18n/agenda/en.json
+++ b/src/app/components/i18n/agenda/en.json
@@ -5,6 +5,18 @@
             "addEvent": "Add event",
             "updateEvent": "Update event",
             "dropdownEffective": "Change effective"
+        },
+        "periodicity" : {
+            "month": "Month",
+            "quarter": "Quarter",
+            "season": "Season"
+        },
+        "eventType" : {
+            "cup": "Cup",
+            "championship": "Championship",
+            "friendlyGame": "Friendly Game",
+            "training": "Training",
+            "other": "Other"
         }
     }
 }
