Debut des travaux sur le signup

--- a/src/app/components/i18n/commons/fr.json
+++ b/src/app/components/i18n/commons/fr.json
@@ -35,6 +35,13 @@
             "back" : "Retour",
             "next" : "Suivant",
             "previous" : "Précédent"
+        },
+        "settings" : {
+            "activity": {
+                "handball" : "Handball",
+                "football" : "Football",
+                "fencing" : "Escrime"
+            }
         }
     }
 }
