--- a/src/app/components/i18n/commons/fr.json
+++ b/src/app/components/i18n/commons/fr.json
@@ -40,7 +40,10 @@
             "activity": {
                 "handball" : "Handball",
                 "football" : "Football",
-                "fencing" : "Escrime"
+                "fencing" : "Escrime",
+                "basketball" : "Basketball",
+                "volleyball" : "Volleyball",
+                "rugbyball" : "Rugby"
             }
         }
     }
