List team + Event

--- a/src/app/components/i18n/agenda/en.json
+++ b/src/app/components/i18n/agenda/en.json
@@ -1,6 +1,6 @@
 {
     "mainAgenda": {
-        "title": "Planning",
+        "title": "Effective planning",
         "buttons" : {
             "addEvent": "Add event",
             "updateEvent": "Update event",
