--- a/src/app/components/i18n/effective/en.json
+++ b/src/app/components/i18n/effective/en.json
@@ -5,6 +5,8 @@
             "addEffective": "Add effective",
             "updateEffective": "Edit effective",
             "addPlayer": "Add player",
+            "addTeamHome": "Add team",
+            "addTeamAdversary": "Add adversary",
             "viewPlayer": "View player sheet",
             "viewStatsEffective": "View stats of effective",
             "dropdownEffective": "Change effective"
@@ -22,9 +24,13 @@
     },
     "effectiveLabels": {
         "effectiveCategoryAge": "Category Age",
-        "effectiveMembers": "Player list",
-        "effectiveCoachs": "Coachs",
-        "effectiveTeams": "Team list",
+        "effectiveTabMembers": "Player list",
+        "effectiveTabCoachs": "Coachs",
+        "effectiveTabTeams": "Team list",
+        "effectiveTeamsHome": "Effective Team list",
+        "effectiveTeamsAdversary": "Adversaries",
+        "effectiveTeamEnable": "Team Enable",
+        "effectiveTeamNotEnable": "Team disable",
         "effectivePlaceHolderMembers": "Add a player",
         "effectiveLabel": "Label",
         "effectiveNbPlayers":"Player(s) selected",
