--- a/src/app/components/i18n/effective/en.json
+++ b/src/app/components/i18n/effective/en.json
@@ -86,22 +86,15 @@
         "playerMail": "E-mail"
     },
     
-    "group": {
-        "dashboard": {
-          "maintitle": "Groups Management",
-          "addPlayer": "Add group",
-          "editGroup": "Edit group",
-          "name": "Name",
-          "firstName": "Firstname",
-          "groupsEmpty": "There is no group for this category"
-        },
-        "form": {
-          "maintitle": "Management group",
-          "label": "Label",
-          "level": "Level Game",
-          "category": "Category age",
-          "defaultCard": "Drag and drop player here",
-          "columName": "Members group"
-        } 
+    "addTeam": {
+        "title": "Add Team",
+        "toastSuccess":"{{label}} was added",
+        "toastError":"Error, team {{label}} can't be create"
+    },
+    "teamLabels" : {
+        "label" : "Label",
+        "enable": "Activate",
+        "disable":"Disactivate",
+        "status" : "Choice status"
     }
 }
