--- a/src/app/components/i18n/effective/fr.json
+++ b/src/app/components/i18n/effective/fr.json
@@ -86,22 +86,15 @@
         "playerMail": "Email"
     },
     
-    "group": {
-        "dashboard": {
-          "maintitle": "Gestion des groupes",
-          "addGroup": "Ajouter un groupe",
-          "editGroup": "Modifier le groupe",
-          "name": "Nom",
-          "firstName": "Prénom",
-          "groupsEmpty": "Aucun groupe de trouvé pour cette catégorie"
-        },
-        "form": {
-          "maintitle": "Gestion du groupe",
-          "label": "Libellé du groupe",
-          "level": "Niveau de jeu",
-          "category": "Catégorie d'âge",
-          "defaultCard": "Glisser déposer un joueur ici",
-          "columName": "Membres du groupe"
-        } 
+    "addTeam": {
+        "title": "Ajout d'une équipe",
+        "toastSuccess":"L'équipe {{label}} a été ajoutée",
+        "toastError":"Erreur, l'équipe {{label}} n'a pas été créée"
+    },
+    "teamLabels" : {
+        "label" : "Libellé",
+        "enable": "Activer",
+        "disable":"Désactiver",
+        "status" : "Choisir un statut"
     }
 }
