--- a/src/app/components/i18n/home/fr.json
+++ b/src/app/components/i18n/home/fr.json
@@ -1,8 +1,8 @@
 {
     "dashboard" : {
-        "event" : "Prochain événement",
-        "stats" : "Statistiques événement",
+        "event" : "Prochain évènement",
+        "stats" : "Statistiques évènement",
         "player" : "Statistiques joueur",
-        "topplayer" : "Top 3"
+        "teams" : "Statistiques équipes"
     }   
 }
