Signup + recup master

--- a/src/app/components/i18n/menu/fr.json
+++ b/src/app/components/i18n/menu/fr.json
@@ -33,7 +33,9 @@
         },
         "signup": {
             "label": {
-                "login": "Login",
+                "name": "Nom",
+                "firstname": "Prénom",
+				"login": "Login",
                 "email" : "e-Mail",
                 "password": "Mot de passe",
                 "passwordConfirm" : "Confirmation mot de passe",
