--- a/src/app/components/i18n/commons/en.json
+++ b/src/app/components/i18n/commons/en.json
@@ -35,6 +35,16 @@
             "back" : "Return",
             "next" : "Next",
             "previous" : "Previous"
+        },
+        "settings" : {
+            "activity": {
+                "handball" : "Handball",
+                "football" : "Football",
+                "fencing" : "Fencing",
+                "basketball" : "Basketball",
+                "volleyball" : "Volleyball",
+                "rugbyball" : "Rugby"
+            }
         }
     }
 }
