--- a/src/app/components/i18n/menu/en.json
+++ b/src/app/components/i18n/menu/en.json
@@ -49,7 +49,8 @@
         	"password": {
         		"short" : "Le mot de passe que vous avez choisi est trop court",
         		"different" : "Le mot de passe et sa confirmation sont différents"
-        	}
+        	},
+        	"unknown" : "Unknown error"
     	}
     }
 }
