Gestion de la nationalité / Correctif sur affichage données user

--- a/src/app/components/i18n/user/fr.json
+++ b/src/app/components/i18n/user/fr.json
@@ -78,7 +78,7 @@
 			"2" : "Vous venez de finaliser la création de votre compte Qaobee !",
 			"3" : "Pour vous aider à débuter, nous vous avons créé une équipe et un effectif.",
 			"4" : "Connectez-vous dès à présent pour découvrir votre nouvel espace de travail !",
-			"signature" : "L'équipe Qaobbe."
+			"signature" : "L'équipe Qaobee."
 		}, 
 		"buttonHome" : "Accueil" 
 	}
