Correctifs birthdate + plan + activity

--- a/src/app/components/i18n/user/en.json
+++ b/src/app/components/i18n/user/en.json
@@ -18,8 +18,10 @@
 	        "userName" : "Nom",
 	        "userFirstname" : "Prénom",
 	        "userGender" : "Civilité",
-	        "userGenderM" : "Monsieur",
-	        "userGenderF" : "Madame",
+	        "gender" : {
+	        	"male" : "Mister",
+	        	"female" : "Madam"
+	        },
 	        "userBirthDate" : "Date de naissance",
 	        "userNationality" : "Nationalité",
 	        "userEMail" : "e-Mail",
