Récupération du pays et code postal liés à la ville du club pour améliorer rech structure + création structure

--- a/src/app/components/i18n/user/en.json
+++ b/src/app/components/i18n/user/en.json
@@ -49,11 +49,13 @@
 		"label" : {
 			"userSignupStructureSection" : "Choix du club",
 	        "userStructureCity" : "Ville du club",
+	        "userZipcode" : "Zipcode",
 	        "userStructureName" : "Nom du club"
 	    }, 
 	    "list" : {
 	    	"empty" : "No data found",
-	    	"inProgress" : "Search in progress..."
+	    	"inProgress" : "Search in progress...",
+	    	"create" : "Create club"
 	    },
 	    "ph" : {
 	    	"structureMandatory" : "Un club doit être choisi"
