--- a/src/app/components/i18n/effective/fr.json
+++ b/src/app/components/i18n/effective/fr.json
@@ -100,8 +100,8 @@
     
     "teamLabels" : {
         "label" : "Libellé",
-        "enable": "Activer",
-        "disable":"Désactiver",
+        "enable": "Activé",
+        "disable":"Désactivé",
         "status" : "Choisir un statut"
     }
 }
