--- a/src/app/components/i18n/stats/en.json
+++ b/src/app/components/i18n/stats/en.json
@@ -1,182 +1,14 @@
 {
-  "stat": {
-    "novalue": "No value for {{name}}",
-    "pass": {
-      "libelle": "Pass"
-    },
-    "center": {
-      "libelle": "Center"
-    },
-    "corner": {
-      "libelle": "Corner"
-    },
-    "freekick": {
-      "libelle": "Freekick"
-    },
-    "penalty": {
-      "libelle": "Penalty"
-    },
-    "shoot": {
-      "libelle": "Shoot"
-    },
-    "dribble": {
-      "libelle": "Dribble"
-    },
-    "tacle": {
-      "libelle": "Tacle"
-    },
-    "aggressiveness": {
-      "libelle": "Agressiveness"
-    },
-    "anticipation": {
-      "libelle": "Anticipation"
-    },
-    "concentration": {
-      "libelle": "Concentration"
-    },
-    "altruism": {
-      "libelle": "Altruism"
-    },
-    "courage": {
-      "libelle": "Courage"
-    },
-    "creativity": {
-      "libelle": "Creativity"
-    },
-    "motivation": {
-      "libelle": "Motivation"
-    },
-    "self-control": {
-      "libelle": "Self-control"
-    },
-    "leadership": {
-      "libelle": "Leadership"
-    },
-    "professionalism": {
-      "libelle": "Professionalism"
-    },
-    "explosive": {
-      "libelle": "Explosiveness"
-    },
-    "speed": {
-      "libelle": "Speed"
-    },
-    "traction": {
-      "libelle": "Motricity"
-    },
-    "verticaljump": {
-      "libelle": "Vertical jump"
-    },
-    "endurance": {
-      "libelle": "Endurance"
-    },
-    "equilibrium": {
-      "libelle": "Equilibrium"
-    },
-    "strenght": {
-      "libelle": "Strenght"
-    },
-    "nimbleness": {
-      "libelle": "Agility"
-    },
-    "positionType": {
-      "libelle": "Position type",
-      "value": {
-        "midfielder": "Midfielder",
-        "defender": "Defender",
-        "forward": "Forward",
-        "goalkeeper": "Goalkeeper",
-        "pivot": "Pivot",
-        "center-backcourt": "Center-backcourt",
-        "right-backcourt": "Right-backcourt",
-        "left-backcourt": "Left-backcourt",
-        "right-wingman": "Right-wingman",
-        "left-wingman": "Left-wingman"
-        
-      },
-      "val": "1"
-    },
-    "laterality": {
-      "libelle": "Laterality",
-      "value": {
-        "lefthanded": "Left-handed",
-        "righthanded": "Right-handed",
-        "ambidextrous": "Ambidextrous"
-      }
-    },
-    "stateForm": {
-      "libelle": "State Form",
-      "value": {
-        "excellent": "Excellent",
-        "good": "Good",
-        "middling": "Middling",
-        "poor": "Poor",
-        "verypoor": "Very poor"
-      },
-      "val": "1"
-    },
-    "attendance": {
-      "libelle": "Attendance (%)",
-      "value": {
-        "absent": "Absent",
-        "present": "Present"
-      },
-      "val": "1"
-    },
-    "unavailability": {
-      "libelle": "Available",
-      "reason": "Reason",
-      "value": {
-        "unavailable": "Unavailable",
-        "available": "Available"
-      },
-      "detailValue": {
-        "available": "Available",
-        "injured": "Injured",
-        "suspended": "Suspended",
-        "absent": "Absent"
-      },
-      "val": "available"
-    },
-    "goalscored": {
-      "libelle": "Scored goal(s)",
-      "value": {},
-      "val": "1"
-    },
-    "goalconceded": {
-      "libelle": "Conceded goal(s)",
-      "value": {},
-      "val": "1"
-    },
-    "holder": {
-      "libelle": "Match(s) holder",
-      "value": {},
-      "val": "1"
-    },
-    "substitue": {
-      "libelle": "Match(s) substitute",
-      "value": {},
-      "val": "1"
-    },
-    "yellowCard": {
-      "libelle": "Yellow(s) card(s)",
-      "value": {},
-      "val": "1"
-    },
-    "redCard": {
-      "libelle": "Red(s) card(s)",
-      "value": {},
-      "val": "1"
-    },
-    "playtime": {
-      "libelle": "Playtime (minutes)",
-      "value": {},
-      "val": "1"
-    },
-    "audience": {
-      "libelle": "Audience per match",
-      "value": {},
-      "val": "1"
+    "stats": {
+        "periodicity" : {
+            "month": "Month",
+            "quarter": "Quarter",
+            "season": "Season"
+        },
+        "labelTab" : {
+			"shoot" : "Shoot", 
+			"actions" : "Game actions", 
+			"sanctions" : "Discipline"
+		}
     }
-  }
 }
