--- a/src/app/components/i18n/stats/fr.json
+++ b/src/app/components/i18n/stats/fr.json
@@ -1,181 +1,14 @@
 {
-  "stat": {
-    "novalue": "Aucune valeur pour {{name}}",
-    "pass": {
-      "libelle": "Passe"
-    },
-    "center": {
-      "libelle": "Centre"
-    },
-    "corner": {
-      "libelle": "Corner"
-    },
-    "freekick": {
-      "libelle": "Coup franc"
-    },
-    "penalty": {
-      "libelle": "Penalty"
-    },
-    "shoot": {
-      "libelle": "Tir"
-    },
-    "dribble": {
-      "libelle": "Dribble"
-    },
-    "tacle": {
-      "libelle": "Tacle"
-    },
-    "aggressiveness": {
-      "libelle": "Agressivité"
-    },
-    "anticipation": {
-      "libelle": "Anticipation"
-    },
-    "concentration": {
-      "libelle": "Concentration"
-    },
-    "altruism": {
-      "libelle": "Altruisme"
-    },
-    "courage": {
-      "libelle": "Courage"
-    },
-    "creativity": {
-      "libelle": "Créativité"
-    },
-    "motivation": {
-      "libelle": "Motivation"
-    },
-    "self-control": {
-      "libelle": "Sang-froid"
-    },
-    "leadership": {
-      "libelle": "Charisme"
-    },
-    "professionalism": {
-      "libelle": "Professionnalisme"
-    },
-    "explosive": {
-      "libelle": "Explosivité"
-    },
-    "speed": {
-      "libelle": "Vitesse"
-    },
-    "traction": {
-      "libelle": "Motricité"
-    },
-    "verticaljump": {
-      "libelle": "Détente"
-    },
-    "endurance": {
-      "libelle": "Endurance"
-    },
-    "equilibrium": {
-      "libelle": "Equilibre"
-    },
-    "strenght": {
-      "libelle": "Puissance"
-    },
-    "nimbleness": {
-      "libelle": "Agilité"
-    },
-    "positionType": {
-      "libelle": "Poste",
-      "value": {
-        "midfielder": "Milieu",
-        "defender": "Défenseur",
-        "forward": "Attaquant",
-        "goalkeeper": "Gardien",
-        "pivot": "Pivot",
-        "center-backcourt": "Demi-centre",
-        "right-backcourt": "Arrière Droit",
-        "left-backcourt": "Arrière Gauche",
-        "right-wingman": "Ailier Droit",
-        "left-wingman": "Ailier Gauche"
-      },
-      "val": "1"
-    },
-    "laterality": {
-      "libelle": "Latéralité",
-      "value": {
-        "lefthanded": "Gaucher",
-        "righthanded": "Droitier",
-        "ambidextrous": "Ambidextre"
-      }
-    },
-    "stateForm": {
-      "libelle": "Etat de forme",
-      "value": {
-        "excellent": "Excellent",
-        "good": "Bon",
-        "middling": "Moyen",
-        "poor": "Faible",
-        "verypoor": "Très faible"
-      },
-      "val": "1"
-    },
-    "attendance": {
-      "libelle": "Assiduité (%)",
-      "value": {
-        "absent": "Absent",
-        "present": "Présent"
-      },
-      "val": "1"
-    },
-    "unavailability": {
-      "libelle": "Disponibilité",
-      "reason": "Raison",
-      "value": {
-        "unavailable": "Indisponible",
-        "available": "Disponible"
-      },
-      "detailValue": {
-        "available": "Disponible",
-        "injured": "Blessé",
-        "suspended": "Suspendu",
-        "absent": "Absent"
-      },
-      "val": "available"
-    },
-    "goalscored": {
-      "libelle": "But(s) marqué(s)",
-      "value": {},
-      "val": "1"
-    },
-    "goalconceded": {
-      "libelle": "But(s) encaissé(s)",
-      "value": {},
-      "val": "1"
-    },
-    "holder": {
-      "libelle": "Match(s) titulaire",
-      "value": {},
-      "val": "1"
-    },
-    "substitue": {
-      "libelle": "Match(s) remplaçant",
-      "value": {},
-      "val": "1"
-    },
-    "yellowCard": {
-      "libelle": "Carton(s) jaune(s)",
-      "value": {},
-      "val": "1"
-    },
-    "redCard": {
-      "libelle": "Carton(s) jaune(s)",
-      "value": {},
-      "val": "1"
-    },
-    "playtime": {
-      "libelle": "Temps de jeu (minutes)",
-      "value": {},
-      "val": "1"
-    },
-    "audience": {
-      "libelle": "Nombre de spectateurs par match",
-      "value": {},
-      "val": "1"
+    "stats": {
+        "periodicity" : {
+			"month" : "Mois", 
+			"quarter" : "Trimestre", 
+			"season" : "Saison"
+		},
+        "labelTab" : {
+			"shoot" : "Tir", 
+			"actions" : "Actions de jeu", 
+			"sanctions" : "Discipline"
+		}
     }
-  }
 }
