--- a/src/app/components/i18n/commons/fr.json
+++ b/src/app/components/i18n/commons/fr.json
@@ -5,8 +5,15 @@
             "height": "cm",
             "ageYear": "ans",
             "date": {
-              "pattern": "DD/MM/YYYY",
-              "label": "dd/MM/yyyy"
+                "pattern": "DD/MM/YYYY",
+                "label": "dd/mm/yyyy",
+                "listMonth": "Janvier,Février,Mars,Avril,Mai,Juin,Juillet,Aout,Septembre,Octobre,Novembre,Décembre",
+                "listMonthShort":"Jan,Fév,Mar,Avr,Mai,Juin,Juil,Aout,Sep,Oct,Nov,Déc",
+                "listWeekdaysFull":"Dimanche,Lundi,Mardi,Mercredi,Jeudi,Vendredi,Samedi",
+                "listWeekdaysLetter":"D,L,M,M,J,V,S",
+                "today":"Today",
+                "clear":"Annuler",
+                "close":"Fermer"
             },
             "phone": {
                 "pattern": "99-99-99-99-99"
@@ -21,7 +28,7 @@
         },
         "popup": {
             "warning": {
-                "unregistreduser": "Vous n'avez pas validé votre e-mail."
+                "unregistreduser": "Vous navez pas validé votre e-mail."
             }
         },
         "toolBar": {
