Correctifs sur liste des catégories d'age

--- a/src/app/components/i18n/user/en.json
+++ b/src/app/components/i18n/user/en.json
@@ -77,7 +77,8 @@
 	    "ph" : {
 	    	"structureMandatory" : "Un club doit être choisi",
 	    	"createLabelMandatory" : "Nom du club à créer obligatoire",
-	    	"createAddressMandatory" : "Adresse du club à créer obligatoire"
+	    	"createAddressMandatory" : "Adresse du club à créer obligatoire",
+	    	"categoryAgeMandatory" : "La catégorie d'âge est obligatoire"
 	    }
 	},
 	"sumupSection" : {
